[MOD] completo project

--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 </head>
 <body>
     
-<div class="example"></div>
-<div class="example"></div>
-<div class="example"></div>
-<div class="example"></div>
-<div class="example"></div>
-
-
+<div id="container"></div>
 
     <script src="../javascript-module/js/main.js"></script>
 </body>
