--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+<button id="add">Agrega</button>
 <div id="container"></div>
-
-    <script src="../javascript-module/js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
