--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<button id="add">Agrega</button>
+<button id="stop">Clean</button>
+<button id="reset">Reset</button>
 <div id="container"></div>
 <script src="js/main.js"></script>
 </body>
